# muse-chain

./: .gitignore  CMakeLists.txt  README.md  bind.cpp  chain.ini  chain_net.json  client.cpp  main.cpp  package.hpp
dependency/inicpp/: inicpp.hpp
dependency/leveldb-1.23/build_vs/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
dependency/leveldb-1.23/build_vs/.cmake/api/v1/reply/: cache-v2-1885c6b6feb960ecf261.json  cmakeFiles-v1-3f70466491d3fc98202f.json  codemodel-v2-4528936d97fa679b8c42.json  directory-.-Debug-c9198cb72a926e30a546.json  directory-third_party.benchmark.src-Debug-df7ad96123acc7db55df.json  directory-third_party.googletest.googlemock-Debug-142f6465727b3149df71.json  directory-third_party.googletest.googletest-Debug-ac0020674484444d985a.json  index-2023-12-27T13-26-15-0955.json  target-arena_test-Debug-dffc88b78b5886b78a83.json  target-autocompact_test-Debug-5f3f46837606a54aac2b.json  target-benchmark-Debug-d3d220460ef1331f14ac.json  target-benchmark_main-Debug-4008a2b8765ddefe706b.json  target-bloom_test-Debug-af5e4c9f288ba8a3af63.json  target-c_test-Debug-18e6a7961d0fbe131395.json  target-cache_test-Debug-d07f5dc10e963ff6af7a.json  target-coding_test-Debug-023d468ed0a51a0d6a86.json  target-corruption_test-Debug-ccdcf3ca85f9b8f7cbf7.json  target-crc32c_test-Debug-fbd96c49dcde4b94706e.json  target-db_bench-Debug-a4a72e395b1dff1d4a70.json  target-db_test-Debug-dbf9bc01fe44bedddd7d.json  target-dbformat_test-Debug-4bc35ddd87d7349115a7.json  target-env_test-Debug-8726c29ddf247436527e.json  target-env_windows_test-Debug-bca73cdc2aa284bb5fe4.json  target-fault_injection_test-Debug-bf09b8a6371335e00f97.json  target-filename_test-Debug-b63665f5fc2f708e4139.json  target-filter_block_test-Debug-68e442db4cb30645a36b.json  target-gmock-Debug-0e71fe46411a81d89040.json  target-gmock_main-Debug-3b6f371516d92aceabf0.json  target-gtest-Debug-bd1591577b820eb38122.json  target-gtest_main-Debug-ff92d1182ea85eda8204.json  target-hash_test-Debug-237994d46745564c8e6a.json  target-issue178_test-Debug-41274902f4a471df1b58.json  target-issue200_test-Debug-0dda06db3a6d2e80810b.json  target-issue320_test-Debug-0cb563cb9521a38f3ea2.json  target-leveldb-Debug-8d99b48260aa12210251.json  target-leveldbutil-Debug-d5c682a057628b3d8e68.json  target-log_test-Debug-d505ff319afb2f89ba6c.json  target-logging_test-Debug-d479d35bdf202fda3c42.json  target-memenv_test-Debug-4bf837cab2b2784afeee.json  target-no_destructor_test-Debug-b570e3b3a67e21eba58a.json  (+8 more)
docs/: README.md
docs/interfaces/: README.md
docs/nlohmann/: README.md
docs/workflow/: create_block_flow.md  initial_pro.md
include/application/: application.cpp  application.hpp  application_state.cpp  application_state.hpp  chain_ini.hpp  chain_net.cpp  chain_net.hpp
include/consensus/: consensus.cpp  consensus.hpp
include/consensus/srrc/: stack_calculator.cpp  stack_calculator.hpp
include/db/: IGetHashSha3256.hpp  README.md  Trie.cpp  Trie.hpp  account.cpp  account.hpp  affair.cpp  affair.hpp  block.cpp  block.hpp  block_body.cpp  block_body.hpp  block_header.cpp  block_header.hpp  bloom_filter.cpp  bloom_filter.hpp  bloom_filter_store.cpp  bloom_filter_store.hpp  chain_db_exception.cpp  chain_db_exception.hpp  connector_account.cpp  connector_account.hpp  connector_block.cpp  connector_block.hpp  environment_db.cpp  environment_db.hpp  interface_db.cpp  interface_db.hpp  leveldb_account_commit.cpp  leveldb_account_commit.hpp  merkle_patricia_trie.hpp  merkle_tree.cpp  merkle_tree.hpp  mpt_node.hpp  mpt_node_cache.hpp  mpt_node_storage.hpp  node_table.hpp  out_entry.cpp  out_entry.hpp  patricia_trie.cpp  (+8 more)
include/encryption/: README.md  ecc_secp256k1.cpp  ecc_secp256k1.hpp  ecc_sm2_handler.cpp  ecc_sm2_handler.hpp  encryption.cpp  encryption.hpp  hash_handler.cpp  hash_handler.hpp  rsa_handler.cpp  rsa_handler.hpp
include/net/: p2p_router.cpp  p2p_router.hpp  route_path.cpp  route_path.hpp
include/net/entities/: chain_node.cpp  chain_node.hpp  node_net.cpp  node_net.hpp
include/rpc/: rpc.hpp
include/rpc/client/: client.hpp  response_data.cpp  transmitter.hpp  transmitter_event.cpp
include/rpc/logger/: conf.hpp
include/rpc/memory/: conf.cpp
include/rpc/server/: reactor.hpp  reactor_pool.cpp  rpc_response_header.hpp
include/serializer/: binaryDeserializeView.cpp
include/util/: argparse.hpp  logger.hpp  singleton.cpp  singleton.hpp  timebox.cpp  timebox.hpp
tests/: CMakeLists.txt
tests/db/: CMakeLists.txt  affair_test.cpp  base_binary_test.cpp  connector_account_test.cpp  insert_block_ut.cpp  merkle_patricia_trie_test.cpp  merkle_tree_test.cpp  patricia_trie_test.cpp  receipt_test.cpp  transaction_test.cpp
tests/encryption/: CMakeLists.txt  secp256k1_ut.cpp
tests/performance/: CMakeLists.txt  mpt_performance.cpp  package_check_performance.cpp  serializer_performance.cpp  serializer_transaction_performance.cpp
